--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,42 +17,38 @@
         android:theme="@style/Theme.Demo"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
-
-        <activity android:name=".DetailsNotiActivity"
+        <activity
+            android:name=".PrivacyPolicyActivity"
             android:exported="false"
-            android:parentActivityName=".FullNotificationActivity"
-            />
-
-        <activity android:name=".FullNotificationActivity"
+            android:parentActivityName=".MainActivity"/>
+        <activity
+            android:name=".DetailsNotiActivity"
             android:exported="false"
-            android:parentActivityName=".MainActivity"
-            />
-
-        <activity android:name=".FullDataActivity"
+            android:parentActivityName=".FullNotificationActivity" />
+        <activity
+            android:name=".FullNotificationActivity"
             android:exported="false"
-            android:parentActivityName=".MainActivity"
-            />
-
-        <activity android:name=".DetailsAyatActivity"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".FullDataActivity"
             android:exported="false"
-            android:parentActivityName=".MainActivity"
-            />
-
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".DetailsAyatActivity"
+            android:exported="false"
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".SplashScreen"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true" >
-
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
-
     </application>
 
 </manifest>
