package name check, new section added that islamic books, update user interface, push notification section added, books view activity is clear

--- a/settings.gradle
+++ b/settings.gradle
@@ -16,5 +16,5 @@ dependencyResolutionManagement {
         maven { url "https://jitpack.io" }
     }
 }
-rootProject.name = "Daily Ayah"
+rootProject.name = "Daily Ayat"
 include ':app'
