--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,11 +4,11 @@ plugins {
 }
 
 android {
-    namespace 'com.trodev.dailyayah'
+    namespace 'com.trodev.dailyayat'
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.trodev.dailyayah"
+        applicationId "com.trodev.dailyayat"
         minSdk 24
         targetSdk 33
         versionCode 1
@@ -41,16 +41,12 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
-    // git maker dependencies
-  //  implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.25'
+    //pdf viewer
+    implementation 'com.github.barteksc:android-pdf-viewer:3.2.0-beta.1'
 
-    //circular imageview dependencies
-   // implementation 'de.hdodenhof:circleimageview:3.1.0'
-
-    //Glide dependencies
-  //  implementation 'com.squareup.picasso:picasso:2.71828'
-
+    /*image views*/
     implementation 'com.squareup.picasso:picasso:2.71828'
 
+    /*one-signal push notification*/
     implementation 'com.onesignal:OneSignal:[4.0.0, 4.99.99]'
 }
