--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,16 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
 
+
+        <activity
+            android:name=".islamic_books.BooksViewActivity"
+            android:exported="false"
+            />
+        <activity
+            android:name=".islamic_books.BooksActivity"
+            android:exported="false"
+            />
+
         <activity
             android:name=".activities.PrivacyPolicyActivity"
             android:exported="false"
@@ -49,6 +59,7 @@
             </intent-filter>
 
         </activity>
+
         <activity
             android:name=".activities.MainActivity"
             android:exported="false"/>
