--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,20 +18,20 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
 
-
+        <activity
+            android:name=".activities.SettingsActivity"
+            android:exported="false"
+            android:parentActivityName=".activities.MainActivity" />
         <activity
             android:name=".islamic_books.BooksViewActivity"
-            android:exported="false"
-            />
+            android:exported="false" />
         <activity
             android:name=".islamic_books.BooksActivity"
-            android:exported="false"
-            />
-
+            android:exported="false" />
         <activity
             android:name=".activities.PrivacyPolicyActivity"
             android:exported="false"
-            android:parentActivityName=".activities.MainActivity"/>
+            android:parentActivityName=".activities.MainActivity" />
         <activity
             android:name=".activities.DetailsNotiActivity"
             android:exported="false"
@@ -50,20 +50,16 @@
             android:parentActivityName=".activities.MainActivity" />
         <activity
             android:name=".activities.SplashScreen"
-            android:exported="true" >
-
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
-
         <activity
             android:name=".activities.MainActivity"
-            android:exported="false"/>
-
+            android:exported="false" />
     </application>
 
 </manifest>
